Add cors config to user service